Se cambio el menú y agregaron beneficios del yogurt

--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 
 			<ul class="nav">
 
-				<li><a href="">About</a></li>
-				<li><a href="">How It Works</a></li>
-				<li><a href="">Services</a></li>
-				<li><a href="">FAQ</a></li>
-				<li><a href="">Contact</a></li>
+				<li><a href="">Productos</a></li>
+				<li><a href="">Recetas</a></li>
+				<li><a href="">Salud</a></li>
+				<li><a href="">Contacto</a></li>
 
 			</ul>
 
@@ -57,11 +56,10 @@
 
 		<ul class="mobile-nav">
 
-			<li><a href="">About</a></li>
-			<li><a href="">How It Works</a></li>
-			<li><a href="">Services</a></li>
-			<li><a href="">FAQ</a></li>
-			<li><a href="">Contact</a></li>
+			<li><a href="">Productos</a></li>
+			<li><a href="">Recetas</a></li>
+			<li><a href="">Salud</a></li>
+			<li><a href="">Contacto</a></li>
 
 		</ul>
 
@@ -85,15 +83,27 @@
 
 		<div class="row">
 
+			<!-- <div class="col-lg-5 feature">
+
+				<i class="icon-suitcase icon-lg"></i>
+
+				<h2>Alimento Fundamental</h2>
+
+				<p style="text-align: justify">El yogurt es un alimento fundamental para la salud por su composición y características; es uno de los pocos productos con microorganismos y bacterias que contribuyen positivamente al sistema digestivo, puntualmente la flora intestinal, su alto contenido proteico y vitamínico hace del yogurt un complemento esencial en la alimentación de los seres humanos.</p>
+
+				<a href="">Explore more<i class="icon-arrow-long-right"></i></a>
+
+			</div> -->
+
 			<div class="col-lg-5 feature">
 
 				<i class="icon-suitcase icon-lg"></i>
 
-				<h2>Resources</h2>
+				<h2>Fuente de Proteínas, Carbohidratos y Calcio</h2>
 
-				<p>Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+				<p>Yuzy contiene aminoácidos esenciales para tu organismo y por lo tanto es una fuente de proteínas muy completa; además, está compuesto por carbohidratos energizantes y calcio que ayuda a mantener la salud de tus huesos.</p>
 
-				<a href="">Explore more<i class="icon-arrow-long-right"></i></a>
+				<!-- <a href="">Explore more<i class="icon-arrow-long-right"></i></a> -->
 
 			</div>
 
@@ -101,11 +111,11 @@
 
 				<i class="icon-dashboard icon-lg"></i>
 
-				<h2>Training &amp; Funding</h2>
+				<h2>Mejora las Funciones Cerebrales</h2>
 
-				<p>Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+				<p>El yogurt Yuzy contiene un aminoácido llamado triptófano. Este compuesto ayuda al buen funcionamiento de los neurotransmisores del cerebro que se encargan de la transmisión de estímulos nerviosos, teniendo importantes funciones en la regulación del sueño, el apetito y el ánimo.</p>
 
-				<a href="">Browse training<i class="icon-arrow-long-right"></i></a>
+				<!-- <a href="">Browse training<i class="icon-arrow-long-right"></i></a> -->
 
 			</div>
 
@@ -113,11 +123,11 @@
 
 				<i class="icon-cloud icon-lg"></i>
 
-				<h2>Connect</h2>
+				<h2>Alta Fuente de Vitamina B</h2>
 
-				<p>Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+				<p>Nuestro yogurt contiene altas concentraciones de vitamina B2 y vitamina B12. La primera esencia para el metabolismo de la energía, y la segunda para la formación de las células rojas de la sangre y el funcionamiento del sistema nervioso.</p>
 
-				<a href="">Connect now<i class="icon-arrow-long-right"></i></a>
+				<!-- <a href="">Connect now<i class="icon-arrow-long-right"></i></a> -->
 
 			</div>
 
@@ -125,11 +135,11 @@
 
 				<i class="icon-chat icon-lg"></i>
 
-				<h2>Communicate</h2>
+				<h2>Mejora el Sistema Inmune</h2>
 
-				<p>Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+				<p>Entre otros beneficios, los vinculados al sistema inmunológico no se quedan atrás. Investigadores han determinado que el consumo diario de yogurt y, en consecuencia, de sus agentes probióticos, estimula la función inmune dentro de las células de tu cuerpo.</p>
 
-				<a href="">Start now<i class="icon-arrow-long-right"></i></a>
+				<!-- <a href="">Start now<i class="icon-arrow-long-right"></i></a> -->
 
 			</div>
 
